cmake_minimum_required(VERSION 3.14)
project(socket)

set(CMAKE_CXX_STANDARD 17)

include_directories(
        .
        include)

add_executable(socket
        include/ajp13.h
        include/Ajp13Socket.h
        include/AjpBaseSocket.h
        include/Base64.h
        include/Debug.h
        include/Event.h
        include/EventHandler.h
        include/EventTime.h
        include/Exception.h
        include/File.h
        include/FileStream.h
        include/HttpBaseSocket.h
        include/HttpClientSocket.h
        include/HttpdCookies.h
        include/HttpDebugSocket.h
        include/HttpdForm.h
        include/HttpdSocket.h
        include/HttpGetSocket.h
        include/HttpPostSocket.h
        include/HttpPutSocket.h
        include/HttpRequest.h
        include/HttpResponse.h
        include/HTTPSocket.h
        include/HttpTransaction.h
        include/IBase.h
        include/IEventHandler.h
        include/IEventOwner.h
        include/IFile.h
        include/IFileUpload.h
        include/IHttpServer.h
        include/IModel.h
        include/IMutex.h
        include/Ipv4Address.h
        include/Ipv6Address.h
        include/ISocketHandler.h
        include/IStream.h
        include/Json.h
        include/ListenSocket.h
        include/Lock.h
        include/MemFile.h
        include/Mutex.h
        include/Parse.h
        include/ResolvServer.h
        include/ResolvSocket.h
        include/SctpSocket.h
        include/Semaphore.h
        include/SmtpdSocket.h
        include/SocketAddress.h
        include/Socket.h
        include/SocketHandlerEp.h
        include/SocketHandler.h
        include/SocketHandlerThread.h
        include/socket_include.h
        include/sockets-config.h
        include/SocketStream.h
        include/SocketThread.h
        include/SSLInitializer.h
        include/StdLog.h
        include/StdoutLog.h
        include/StreamSocket.h
        include/StreamWriter.h
        include/TcpSocket.h
        include/Thread.h
        include/UdpSocket.h
        include/Utility.h
        include/XmlDocument.h
        include/XmlException.h
        include/XmlNode.h

        src/Ajp13Socket.cpp
        src/AjpBaseSocket.cpp
        src/Base64.cpp
        src/Debug.cpp
        src/Event.cpp
        src/EventHandler.cpp
        src/EventTime.cpp
        src/Exception.cpp
        src/File.cpp
        src/FileStream.cpp
        src/HttpBaseSocket.cpp
        src/HttpClientSocket.cpp
        src/HttpdCookies.cpp
        src/HttpDebugSocket.cpp
        src/HttpdForm.cpp
        src/HttpdSocket.cpp
        src/HttpGetSocket.cpp
        src/HttpPostSocket.cpp
        src/HttpPutSocket.cpp
        src/HttpRequest.cpp
        src/HttpResponse.cpp
        src/HTTPSocket.cpp
        src/HttpTransaction.cpp
        src/IEventOwner.cpp
        src/Ipv4Address.cpp
        src/Ipv6Address.cpp
        src/Json.cpp
        src/Lock.cpp
        src/MemFile.cpp
        src/Mutex.cpp
        src/Parse.cpp
        src/ResolvServer.cpp
        src/ResolvSocket.cpp
        src/SctpSocket.cpp
        src/Semaphore.cpp
        src/SmtpdSocket.cpp
        src/Socket.cpp
        src/SocketHandler.cpp
        src/SocketHandlerEp.cpp
        src/SocketHandlerThread.cpp
        src/socket_include.cpp
        src/Sockets-config.cpp
        src/SocketStream.cpp
        src/SocketThread.cpp
        src/SSLInitializer.cpp
        src/StdoutLog.cpp
        src/StreamSocket.cpp
        src/StreamWriter.cpp
        src/TcpSocket.cpp
        src/Thread.cpp
        src/UdpSocket.cpp
        src/Utility.cpp
        src/XmlDocument.cpp
        src/XmlException.cpp
        src/XmlNode.cpp

        main.cpp)

# add shared library -lpthread
# add static libaray pthread
target_link_libraries(socket
        -lpthread
        )